--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor = "#FA4616"
 backgroundColor = "#000000"
 secondaryBackgroundColor = "#595959"
 textColor = "#FFFFFF"
-font = "arial"
+font = "sans serif"
